[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaic"
description = "Generate image mosaics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    'typer >= 0.4.0',
    'Pillow >= 8.3.2',
]

classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.scripts]
mosaic = 'mosaic:APP'

[tool.setuptools]
py-modules = ["mosaic"]
